--- a/angular.json
+++ b/angular.json
@@ -3,6 +3,9 @@
   "projects": {
     "api": "apps/api",
     "api-interfaces": "libs/api-interfaces",
+    "core-data": "libs/core-data",
+    "core-state": "libs/core-state",
+    "material": "libs/material",
     "songify": "apps/songify",
     "songify-e2e": "apps/songify-e2e"
   }
