--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,10 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@songify-workspace/api-interfaces": ["libs/api-interfaces/src/index.ts"]
+      "@songify-workspace/api-interfaces": ["libs/api-interfaces/src/index.ts"],
+      "@songify-workspace/core-data": ["libs/core-data/src/index.ts"],
+      "@songify-workspace/core-state": ["libs/core-state/src/index.ts"],
+      "@songify-workspace/material": ["libs/material/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
