--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ng": "nx",
     "serve:api": "nx run api:serve",
     "serve:web": "nx serve",
+    "serve:json": "json-server server/db.json",
     "serve:all": "concurrently \" npm run serve:api \" \" npm run serve:web \"",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "build": "nx build",
@@ -29,6 +30,7 @@
     "@ngrx/store": "^13.0.2",
     "@nrwl/angular": "13.9.5",
     "concurrently": "^7.0.0",
+    "json-server": "^0.17.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
