--- a/angular.json
+++ b/angular.json
@@ -7,6 +7,7 @@
     "core-state": "libs/core-state",
     "material": "libs/material",
     "songify": "apps/songify",
-    "songify-e2e": "apps/songify-e2e"
+    "songify-e2e": "apps/songify-e2e",
+    "ui-toolbar": "libs/ui-toolbar"
   }
 }
