--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "^1.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^4.8.2",
     "@ngrx/store": "^13.0.2",
     "@nrwl/angular": "13.9.5",
     "concurrently": "^7.0.0",
     "json-server": "^0.17.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.4.0",
+    "swagger-ui-express": "^4.3.0",
     "tslib": "^2.0.0",
     "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
